feat: add 'collector' role, update reports and login approval logic
